# dash_tools_reflejar

./: README.md  pyproject.toml
src/: indicadores.py
